[vm] migrate vm to new resource hierarchy.